--- a/web_programming.html
+++ b/web_programming.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Web Porgramming</title>
+    <title> Web Porgramming </title>
   </head>
   <body>
     <h1>Web Programming</h1>
@@ -26,7 +26,7 @@
     <ol>
       <li> <a href="index.html"> Web Portfolio (3%) </a></li>
       <li> <a href="Ex2/menu.html"> Menu Recipe (3%) </a></li>
-      <li>Alumni Register Form (3%)</li>
+      <li> <a href="Ex3/form.html"> Alumni Register Form (3%)</a> </li>
       <li>Web Portfolio + CSS (3%)</li>
       <li>Menu Recipe + CSS (3%)</li>
     </ol>
