--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <h2>TEACHING</h2>
     <ol>
       <li> <a href="Web_Programming.html">Web Programming</a></li>
-      <li></li>
-      <li></li>
+      <li>Web Programming</li>
+      <li>Web Programming</li>
 
     </ol>
 
@@ -120,7 +120,7 @@
       <li>หอพักประตู1 มอ</li>
       <li>0937899973</li>
     </ul>
-   
+  
     <!-- ลิงค์หน้าเว็บ -->
     <a href="Basic.html"><h2><center>เมนู</center></h2></a>
 
