--- a/Ex2/menu.html
+++ b/Ex2/menu.html
@@ -40,7 +40,7 @@
         <li>ใส่เนยจืด คนให้ส่วนผสมเข้ากัน ปิดด้วยพลาสติก นำเข้าตู้เย็น รอจนเซตตัวแล้วตักใส่ถุงบีบ</li>
     </ol>
 
-    <h2> ตารางสอนผสม </h2>
+    <h2> ตารางส่วนผสม </h2>
     <table border="2" >
         <tr>
             <td colspan="2">ปริมาณส่วนผสม</td>
