--- a/Ex3/form.html
+++ b/Ex3/form.html
@@ -7,7 +7,7 @@
     <h1>แบบฝึกหัดที่ 3 : HTML Form </h1>
     <h2>รหัสนักศึกษา 6440011023 พิมพ์ลภัส เป็งทร</h2>
 
-    <form action="https://example.com/" method="post">
+    <form action="" method="post">
         <label for="name"> ชื่อ-นามสกุล : </label>
         <input type="text" name="name" size="40" maxlength="50">
         <br><br>
