--- a/Ex3/form.html
+++ b/Ex3/form.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title> HTML Form </title>
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
     <h1>แบบฝึกหัดที่ 3 : HTML Form </h1>
