--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <h2>TEACHING</h2>
     <ol>
-      <li> <a href="Web_programming.html">Web Programming</a></li>
+      <li> <a href="web_programming.html">Web Programming</a></li>
       <li>Web Programming</li>
       <li>Web Programming</li>
 
